[gd_scene load_steps=4 format=3 uid="uid://bo7a3vhjunbtd"]

[ext_resource type="Script" path="res://scripts/speech_bubble.gd" id="1_2x6hh"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_wcg2a"]
size = Vector2(160, 48)

[sub_resource type="LabelSettings" id="LabelSettings_75lam"]
font_size = 10

[node name="SpeechBubble" type="Node2D"]
visible = false
script = ExtResource("1_2x6hh")

[node name="BubbleSprite" type="Sprite2D" parent="."]
texture = SubResource("PlaceholderTexture2D_wcg2a")

[node name="TextLabel" type="Label" parent="BubbleSprite"]
offset_left = -75.0
offset_top = -16.0
offset_right = 81.0
offset_bottom = 15.0
text = "Asdadasdasdasdasd
asdasdsaasdad :D"
label_settings = SubResource("LabelSettings_75lam")
